Ingress/CertManager/ingress-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kafka
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: nginx
  rules:
    - host: kafka.icoder.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-service 
                port:
                  number: 29092 
  tls:
    - hosts:
        - kafka.icoder.vn
      secretName: kafka-icoder-vn
